--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quiz-frontend",
-  "version": "0.1.0",
+  "name": "voprosnikum-frontend",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.5",
