[#34] previous question navigation
-The functionality of returning to the previous question has been implemented
-You can change the selected answer.
-If the previous question was with a `timeLimit`, then the answer to the question cannot be changed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "baseUrl": "src",
 //    "paths": {
 //      "*": ["*"]
 //    },
     "lib": [
-      "dom",
+      "es2015","dom",
       "dom.iterable",
       "esnext"
     ],
+    "downlevelIteration": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
